<resources>
    <string name="app_name">OBS Control</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="MenuSettings">Einstellungen ...</string>
    <string name="strAuthentication">Authentifizierung</string>
    <string name="strPassword">Passwort</string>
    <string name="strLogon">Anmelden</string>
    <string name="str_transition_to_program">Vorschau --> Programm</string>
    <string name="obs_remote_ws_host_caption">OBS Remobe Webservice host</string>
    <string name="ws_host">Webservice Host</string>
    <string name="ws_port">Webservice Port</string>
    <string name="active_scene_caption">aktive Szene:</string>
    <string name="tab_scenes">Szenen</string>
    <string name="tab_hotkeys">Hotkeys</string>
    <string name="transitions_volumes">Trans/Vol</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="minus_infinity">-&#8734; dB</string>
    <string name="zero_db">0 dB</string>
    <string name="display_category">Anzeige</string>
    <string name="font_size">Schriftgröße</string>
    <string name="num_columns">Anzahl an Schaltflächen nebeneinander</string>
    <string name="display_always_on">Bildschirm immer an</string>
    <string name="version">Version...</string>
    <string name="manageHotkeys">Hotkeys verwalten...</string>
    <string name="title_activity_hotkey_config">Hotkeys Configuration</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_add_new_hotkey">AddNewHotkeyActivity</string>
    <string name="shift_text">Shift</string>
    <string name="alt_text">Alt</string>
    <string name="ctrl_text">Ctrl</string>
    <string name="cmd_text">Cmd</string>
    <string name="btn_add">Hinzufügen</string>
    <string name="btn_cancel">Abbrechen</string>
    <string name="txtExportHotkeys">Hotkeys exportieren ...</string>
    <string name="txtImportHotkeys">Hotkeys importieren ...</string>
    <string name="tab_name_preview">Vorschau</string>
    <string name="strUpdateScreenshot">Aktualisieren</string>
    <string name="strScreenshotContentDescription">Screenshot des aktuell übertragenen Bildes</string>
</resources>