<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/obs_remote_ws_host_caption">

        <EditTextPreference
            android:key="ws_host_value"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/ws_host" />
        <EditTextPreference
            android:key="ws_port_value"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/ws_port" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/strAuthentication">

        <EditTextPreference
            android:inputType="textPassword"
            android:key="password_preference"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/strPassword" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/display_category">

        <EditTextPreference
            android:inputType="number|numberDecimal"
            android:key="key_font_size"
            android:title="@string/font_size" />
        <EditTextPreference
            android:defaultValue="4"
            android:key="columns"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/num_columns"
            android:inputType="number" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="wakelock"
            android:title="@string/display_always_on" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>